Fix edit page layout issues

--- a/frontend/src/pages/EditTreePage/styles.scss
+++ b/frontend/src/pages/EditTreePage/styles.scss
@@ -1,21 +1,8 @@
 .EditTreePage {
-  width: 100%;
-  height: 100%;
-  min-height: 100vh;
-
   .MapWithMarker {
-    width: 100%;
-    height: 100%;
     height: 450px;
-    max-height: 40vh;
     margin: 10px 0 20px;
     border-radius: 5px;
     overflow: hidden;
-  }
-
-  .buttons {
-    button {
-      margin-right: 10px;
-    }
   }
 }
